exports[`<CardStack /> <CardStack /> re-renders correctly when "go" action is called 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail">
  Goodbye
</Text>
`;

exports[`<CardStack /> <CardStack /> re-renders correctly when "go" action is called 2`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail">
  Index
</Text>
`;

exports[`<CardStack /> <CardStack /> re-renders correctly when "go" action is called with same path 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail">
  3
</Text>
`;

exports[`<CardStack /> <CardStack /> re-renders correctly when "go" action is called with same path 2`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail">
  1
</Text>
`;

exports[`<CardStack /> <CardStack /> re-renders correctly when "goBack" action is called 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail">
  Hello
</Text>
`;

exports[`<CardStack /> <CardStack /> re-renders correctly when "goBack" action is called 2`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail">
  Index
</Text>
`;

exports[`<CardStack /> <CardStack /> re-renders correctly when "goBack" action is called with same path 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail">
  2
</Text>
`;

exports[`<CardStack /> <CardStack /> re-renders correctly when "goBack" action is called with same path 2`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail">
  1
</Text>
`;

exports[`<CardStack /> <CardStack /> re-renders correctly when "push" action is called 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail">
  Index
</Text>
`;

exports[`<CardStack /> <CardStack /> re-renders correctly when "push" action is called 2`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail">
  Hello
</Text>
`;

exports[`<CardStack /> <CardStack /> re-renders correctly when "push" action is called with same path 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail">
  1
</Text>
`;

exports[`<CardStack /> <CardStack /> re-renders correctly when "push" action is called with same path 2`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail">
  2
</Text>
`;

exports[`<CardStack /> <CardStack /> re-renders correctly when "replace" action is called 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail">
  Hello
</Text>
`;

exports[`<CardStack /> <CardStack /> re-renders correctly when "replace" action is called 2`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail">
  Goodbye
</Text>
`;

exports[`<CardStack /> <CardStack /> re-renders correctly when onNavigateBack() method is called 1`] = `
<View
  onPress={[Function]}>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail">
    Hello
  </Text>
</View>
`;

exports[`<CardStack /> <CardStack /> re-renders correctly when onNavigateBack() method is called 2`] = `
<View
  onPress={[Function]}>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail">
    Index
  </Text>
</View>
`;

exports[`<CardStack /> <CardStack /> renders correctly 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail">
  Index
</Text>
`;

exports[`<CardStack /> <CardStack /> renders correctly with initialIndex and initialEntries prop  1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail">
  Hello
</Text>
`;
